--- a/settings.json
+++ b/settings.json
@@ -1,13 +1,13 @@
 {
-    "City": "Wiesloch",
+    "City": "San Francisco",
     "RefreshTime": 10,
     "OpenWeatherMap": {
-        "API": "7e45a2bf8a32e9bbe1c85ea46d1dc89f",
-        "Latitude": "49.2950",
-        "Longitude": "8.6984", 
-        "Units": "metric",
-        "UnitsFormat": "°C",
-        "DateFormat1": "%d.%m.%Y",
-        "DateFormat2": "%d.%m"
+        "API": " Put your API Key here ",
+        "Latitude": "37.7739",
+        "Longitude": "-122.4312", 
+        "Units": "imperial",
+        "UnitsFormat": "F",
+        "DateFormat1": "%m/%d/%Y",
+        "DateFormat2": "%m/%d"
     }   
 }
